# Amadeus

./: .gitignore  README.md  README_INTEGRATION.md  run_all.sh
amadeus/: .gitignore  ADVANCED_FEATURES.md  ARCHITECTURE.md  Cargo.toml  FILES.md  OPTIMIZATION_SUMMARY.md  PLUGIN_GUIDE.md  PLUGIN_SYSTEM.md  QUICKSTART.md  README.md  amadeus.db
amadeus/doc/: ARCHITECTURE.md  DEVELOPER_GUIDE.md  README.md  plugins_config.example.json
amadeus/examples/: advanced_messaging.rs  basic_lifecycle.rs  core_system_demo.rs  dispatcher_subscription.rs  messaging.rs  rsa_dispatcher.rs  system_test.rs  usage.rs
amadeus/examples/iceoryx2/: README.md  amadeus.db  amadeus_message_data.py  comprehensive_test.py  interactive_test.py  public_key.pem  publisher.py  quick_test.py  requirements.txt  rsa_test.py  run_comprehensive_test.sh  run_test.sh  schedule_task.py  subscriber.py  test_integration.py
amadeus/src/: app.rs  distribution_center.rs  lib.rs  main.rs  message.rs  message_context.rs  message_manager.rs  modules.rs  plugin.rs  plugin_registry_ext.rs
amadeus/src/core/: mod.rs  user.rs
amadeus/src/core/messaging/: distribution_center.rs  message.rs  mod.rs  (+2 more)
amadeus/src/dispatcher/: iceoryx2.rs  mod.rs
amadeus/src/ipc/: iceoryx2_receiver.rs  mod.rs
amadeus/src/plugins/: code4rena.rs  core_system.rs  iceoryx2_dispatcher.rs  message_example.rs  mod.rs
amadeus/src/scheduler/: mod.rs
amadeus/src/storage/: mod.rs
amadeus/src/wasm/: mod.rs
amadeus/tests/: architecture_test.rs  integration_test.rs  security_features_test.rs  system_test.rs  user_system_test.rs
(+31 files in other folders)
