[package]
name = "amadeus"
version = "0.1.0"
edition = "2021"

[lib]
name = "amadeus"
path = "src/lib.rs"

[[bin]]
name = "amadeus"
path = "src/main.rs"

[dependencies]
iceoryx2 = "0.4"     # 零拷贝进程间通信
anyhow = "1.0"       # 错误处理
serde = { version = "1.0", features = ["derive"] }  # 序列化/反序列化
serde_json = "1.0"   # JSON 支持
tokio = { version = "1.0", features = ["full"] }  # 异步运行时和通道
