[package]
name = "amadeus"
version = "0.1.0"
edition = "2021"

[lib]
name = "amadeus"
path = "src/lib.rs"

[[bin]]
name = "amadeus"
path = "src/main.rs"

[dependencies]
iceoryx2 = "0.7"     # 零拷贝进程间通信
iceoryx2-bb-derive-macros = "0.7"  # ZeroCopySend derive macro (proc-macro)
iceoryx2-bb-elementary-traits = "0.7"  # ZeroCopySend trait
anyhow = "1.0"       # 错误处理
serde = { version = "1.0", features = ["derive"] }  # 序列化/反序列化
serde_json = "1.0"   # JSON 支持
tokio = { version = "1.0", features = ["full"] }  # 异步运行时和通道
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
